--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,28 +83,28 @@ jobs:
         mkdir -p /tmp/nginx/{logs,modules}
         cp objs/ngx_http_upstream_mgmt_module.so /tmp/nginx/modules/
         
-        # Create test config with proper escaping
-        cat << "EOF" > test.conf
-        load_module "/tmp/nginx/modules/ngx_http_upstream_mgmt_module.so";
+        # Create test config
+        cat > test.conf << EOF
+load_module "/tmp/nginx/modules/ngx_http_upstream_mgmt_module.so";
 
-        events {
-            worker_connections 1024;
+events {
+    worker_connections 1024;
+}
+
+http {
+    upstream backend {
+        server 127.0.0.1:8080;
+        server 127.0.0.1:8081;
+    }
+
+    server {
+        listen 8000;
+        
+        location /api/upstreams {
+            upstream_mgmt;
         }
-
-        http {
-            upstream backend {
-                server 127.0.0.1:8080;
-                server 127.0.0.1:8081;
-            }
-
-            server {
-                listen 8000;
-                
-                location /api/upstreams {
-                    upstream_mgmt;
-                }
-            }
-        }
+    }
+}
 EOF
 
         # Show generated config
