--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,6 @@ jobs:
       matrix: ${{ steps.get-versions.outputs.matrix }}
     
     steps:
-    - uses: actions/checkout@v3
-    
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
@@ -26,10 +24,90 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install requests beautifulsoup4
-    
+
+    - name: Create version checker script
+      run: |
+        mkdir -p scripts
+        cat > scripts/version_checker.py << 'EOL'
+        import os
+        import requests
+        from bs4 import BeautifulSoup
+        from requests.adapters import HTTPAdapter
+        from requests.packages.urllib3.util.retry import Retry
+
+        def fetch_url(url):
+            session = requests.Session()
+            retries = Retry(total=3, backoff_factor=1, status_forcelist=[500, 502, 503, 504])
+            session.mount("https://", HTTPAdapter(max_retries=retries))
+            response = session.get(url, timeout=10)
+            response.raise_for_status()
+            return response
+
+        def extract_versions(soup, stable_label, mainline_label, prefix):
+            versions = {"stable": None, "mainline": None}
+            for tag in soup.find_all(["strong", "h4"]):
+                text = tag.get_text(strip=True).lower()
+                if stable_label in text:
+                    table_or_next = tag.find_next(["a", "table"])
+                    if table_or_next:
+                        version_link = table_or_next.find("a", href=True, string=lambda s: s and prefix in s)
+                        if version_link:
+                            versions["stable"] = version_link.string.split('-')[1].strip('.tar.gz')
+                elif mainline_label in text:
+                    table_or_next = tag.find_next(["a", "table"])
+                    if table_or_next:
+                        version_link = table_or_next.find("a", href=True, string=lambda s: s and prefix in s)
+                        if version_link:
+                            versions["mainline"] = version_link.string.split('-')[1].strip('.tar.gz')
+            return versions
+
+        def get_nginx_versions():
+            url = "https://nginx.org/en/download.html"
+            try:
+                print(f"Fetching {url}...")
+                response = fetch_url(url)
+            except requests.RequestException as e:
+                print(f"Error fetching {url}: {e}")
+                return {"stable": None, "mainline": None}
+
+            soup = BeautifulSoup(response.text, 'html.parser')
+            return extract_versions(soup, "stable version", "mainline version", "nginx-")
+
+        def get_freenginx_versions():
+            url = "https://freenginx.org/en/download.html"
+            try:
+                print(f"Fetching {url}...")
+                response = fetch_url(url)
+            except requests.RequestException as e:
+                print(f"Error fetching {url}: {e}")
+                return {"stable": None, "mainline": None}
+
+            soup = BeautifulSoup(response.text, 'html.parser')
+            return extract_versions(soup, "stable version", "mainline version", "freenginx-")
+
+        def main():
+            nginx_versions = get_nginx_versions()
+            freenginx_versions = get_freenginx_versions()
+
+            versions = []
+            if nginx_versions['stable']:
+                versions.append(f"nginx-{nginx_versions['stable']}")
+            if nginx_versions['mainline']:
+                versions.append(f"nginx-{nginx_versions['mainline']}")
+            if freenginx_versions['stable']:
+                versions.append(f"freenginx-{freenginx_versions['stable']}")
+            if freenginx_versions['mainline']:
+                versions.append(f"freenginx-{freenginx_versions['mainline']}")
+
+            print(f"::set-output name=matrix::{versions}")
+
+        if __name__ == "__main__":
+            main()
+        EOL
+
     - name: Get latest versions
       id: get-versions
-      run: python .github/workflows/version_checker.py
+      run: python scripts/version_checker.py
 
   build:
     needs: check-versions
@@ -54,14 +132,7 @@ jobs:
         echo "TYPE=$type" >> $GITHUB_OUTPUT
         echo "VERSION=$version" >> $GITHUB_OUTPUT
 
-    - name: Cache source
-      uses: actions/cache@v3
-      with:
-        path: ${{ matrix.version }}
-        key: ${{ matrix.version }}-source
-
     - name: Download and Extract
-      if: steps.cache-source.outputs.cache-hit != 'true'
       run: |
         if [[ "${{ steps.parse.outputs.TYPE }}" == "nginx" ]]; then
           wget https://nginx.org/download/nginx-${{ steps.parse.outputs.VERSION }}.tar.gz
@@ -78,21 +149,16 @@ jobs:
 
     - name: Build Module
       run: |
-        cd ${{ matrix.version }}
+        BUILD_DIR="${{ steps.parse.outputs.TYPE }}-${{ steps.parse.outputs.VERSION }}"
+        cd $BUILD_DIR
         ./configure --with-compat --add-dynamic-module=../
         make modules
-
-    - name: Run Tests
-      run: |
-        # Add your test commands here
-        # Example:
-        # make test
 
     - name: Upload Build Artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: nginx-modules-${{ matrix.version }}
-        path: ${{ matrix.version }}/objs/*.so
+        name: ${{ matrix.version }}-modules
+        path: ${{ steps.parse.outputs.TYPE }}-${{ steps.parse.outputs.VERSION }}/objs/*.so
 
   security:
     runs-on: ubuntu-latest
@@ -130,4 +196,3 @@ jobs:
           echo "README.md is missing"
           exit 1
         fi
-        # Add more documentation checks as needed
