--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -179,6 +179,9 @@ jobs:
         cd "${{ steps.download.outputs.BUILD_DIR }}"
         echo "Configure options:"
         
+        # Make sure objs directory exists
+        mkdir -p objs
+        
         CONFIG_OPTS="--add-dynamic-module=../"
         case "${{ matrix.config }}" in
           debug)
@@ -195,6 +198,11 @@ jobs:
         echo "Running ./configure $CONFIG_OPTS"
         ./configure $CONFIG_OPTS
         make modules
+        
+        # Check if module was built
+        echo "Checking built module:"
+        ls -l objs/ngx_http_upstream_mgmt_module.so
+        file objs/ngx_http_upstream_mgmt_module.so
 
     - name: Run integration tests
       env:
