--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -223,14 +223,19 @@ jobs:
           {name: 'ubuntu-2004', container: 'ubuntu:20.04'},
           {name: 'debian-bullseye', container: 'debian:bullseye'},
           {name: 'debian-bookworm', container: 'debian:bookworm'},
-          {name: 'centos-7', container: 'centos:7'},
-          {name: 'rocky-8', container: 'rockylinux:8'},
           {name: 'fedora-latest', container: 'fedora:latest'}
         ]
+        include:
+          - version: ${{ fromJson(needs.check-versions.outputs.matrix)[0] }}
+            distro: {name: 'centos-7', container: 'centos:7'}
+            use-composite: true
+          - version: ${{ fromJson(needs.check-versions.outputs.matrix)[0] }}
+            distro: {name: 'rocky-8', container: 'rockylinux:8'}
+            use-composite: true
       fail-fast: false
 
-    runs-on: ubuntu-latest
-    container: ${{ matrix.distro.container }}
+    runs-on: ${{ matrix.use-composite && 'ubuntu-20.04' || 'ubuntu-latest' }}
+    container: ${{ !matrix.use-composite && matrix.distro.container || '' }}
 
     steps:
     - uses: actions/checkout@v3
@@ -241,15 +246,7 @@ jobs:
       run: |
         set -x  # Enable debug output
         apt-get update
-        apt-get install -y build-essential libpcre3-dev zlib1g-dev libssl-dev wget
-        gcc --version
-
-    - name: Install build dependencies (CentOS/Rocky)
-      if: contains(matrix.distro.container, 'centos') || contains(matrix.distro.container, 'rocky')
-      shell: bash
-      run: |
-        set -x  # Enable debug output
-        yum install -y gcc make pcre-devel zlib-devel openssl-devel wget
+        apt-get install -y build-essential libpcre3-dev zlib1g-dev libssl-dev wget file
         gcc --version
 
     - name: Install build dependencies (Fedora)
@@ -257,8 +254,36 @@ jobs:
       shell: bash
       run: |
         set -x  # Enable debug output
-        dnf install -y gcc make pcre-devel zlib-devel openssl-devel wget
+        dnf install -y gcc make pcre-devel zlib-devel openssl-devel wget file
         gcc --version
+
+    - name: Setup RHEL-based environment
+      if: matrix.use-composite
+      uses: docker://quay.io/${{ matrix.distro.container }}
+      with:
+        args: >
+          bash -c "
+          if command -v yum &> /dev/null; then
+            yum install -y gcc make pcre-devel zlib-devel openssl-devel wget file;
+          else
+            dnf install -y gcc make pcre-devel zlib-devel openssl-devel wget file;
+          fi;
+          gcc --version;
+          cd /github/workspace;
+          if [ '${{ steps.parse.outputs.TYPE }}' = 'nginx' ]; then
+            wget --no-verbose https://nginx.org/download/nginx-${{ steps.parse.outputs.VERSION }}.tar.gz;
+            tar -xzf nginx-${{ steps.parse.outputs.VERSION }}.tar.gz;
+            cd nginx-${{ steps.parse.outputs.VERSION }};
+          else
+            wget --no-verbose https://freenginx.org/download/freenginx-${{ steps.parse.outputs.VERSION }}.tar.gz;
+            tar -xzf freenginx-${{ steps.parse.outputs.VERSION }}.tar.gz;
+            cd freenginx-${{ steps.parse.outputs.VERSION }};
+          fi;
+          ./configure --with-compat --add-dynamic-module=../;
+          make modules;
+          ls -l objs/*.so;
+          file objs/*.so;
+          "
 
     - name: Parse version info
       id: parse
@@ -275,6 +300,7 @@ jobs:
 
     - name: Download and Extract
       id: download
+      if: "!matrix.use-composite"
       shell: bash
       run: |
         set -x  # Enable debug output
@@ -292,6 +318,7 @@ jobs:
         ls -la
 
     - name: Build Module
+      if: "!matrix.use-composite"
       shell: bash
       run: |
         set -x  # Enable debug output
@@ -305,13 +332,24 @@ jobs:
         ls -l objs/ngx_http_upstream_mgmt_module.so
         file objs/ngx_http_upstream_mgmt_module.so
 
-    - name: Upload Build Artifacts
+    - name: Upload Build Artifacts (Container)
+      if: "!matrix.use-composite"
       uses: actions/upload-artifact@v3
       with:
         name: ${{ matrix.version }}-${{ matrix.distro.name }}-modules
         path: |
           ${{ steps.download.outputs.BUILD_DIR }}/objs/*.so
           ${{ steps.download.outputs.BUILD_DIR }}/objs/*.a
+        if-no-files-found: error
+
+    - name: Upload Build Artifacts (Composite)
+      if: matrix.use-composite
+      uses: actions/upload-artifact@v3
+      with:
+        name: ${{ matrix.version }}-${{ matrix.distro.name }}-modules
+        path: |
+          /github/workspace/nginx-${{ steps.parse.outputs.VERSION }}/objs/*.so
+          /github/workspace/nginx-${{ steps.parse.outputs.VERSION }}/objs/*.a
         if-no-files-found: error
 
   security:
