--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -217,31 +217,40 @@ jobs:
     needs: [check-versions]
     strategy:
       matrix:
-        version: ${{ fromJson(needs.check-versions.outputs.matrix) }}
-        distro: [
-          {name: 'ubuntu-2204', container: 'ubuntu:22.04'},
-          {name: 'ubuntu-2004', container: 'ubuntu:20.04'},
-          {name: 'debian-bullseye', container: 'debian:bullseye'},
-          {name: 'debian-bookworm', container: 'debian:bookworm'},
-          {name: 'fedora-latest', container: 'fedora:latest'}
-        ]
         include:
           - version: ${{ fromJson(needs.check-versions.outputs.matrix)[0] }}
-            distro: {name: 'centos-7', container: 'centos:7'}
-            use-composite: true
+            os: 'ubuntu-2204'
+            container: 'ubuntu:22.04'
           - version: ${{ fromJson(needs.check-versions.outputs.matrix)[0] }}
-            distro: {name: 'rocky-8', container: 'rockylinux:8'}
-            use-composite: true
+            os: 'ubuntu-2004'
+            container: 'ubuntu:20.04'
+          - version: ${{ fromJson(needs.check-versions.outputs.matrix)[0] }}
+            os: 'debian-bullseye'
+            container: 'debian:bullseye'
+          - version: ${{ fromJson(needs.check-versions.outputs.matrix)[0] }}
+            os: 'debian-bookworm'
+            container: 'debian:bookworm'
+          - version: ${{ fromJson(needs.check-versions.outputs.matrix)[0] }}
+            os: 'fedora-latest'
+            container: 'fedora:latest'
+          - version: ${{ fromJson(needs.check-versions.outputs.matrix)[0] }}
+            os: 'centos-7'
+            container: 'centos:7'
+            use_composite: true
+          - version: ${{ fromJson(needs.check-versions.outputs.matrix)[0] }}
+            os: 'rocky-8'
+            container: 'rockylinux:8'
+            use_composite: true
       fail-fast: false
 
-    runs-on: ${{ matrix.use-composite && 'ubuntu-20.04' || 'ubuntu-latest' }}
-    container: ${{ !matrix.use-composite && matrix.distro.container || '' }}
+    runs-on: ${{ matrix.use_composite && 'ubuntu-20.04' || 'ubuntu-latest' }}
+    container: ${{ !matrix.use_composite && matrix.container || '' }}
 
     steps:
     - uses: actions/checkout@v3
 
     - name: Install build dependencies (Debian/Ubuntu)
-      if: contains(matrix.distro.container, 'ubuntu') || contains(matrix.distro.container, 'debian')
+      if: contains(matrix.container, 'ubuntu') || contains(matrix.container, 'debian')
       shell: bash
       run: |
         set -x  # Enable debug output
@@ -250,7 +259,7 @@ jobs:
         gcc --version
 
     - name: Install build dependencies (Fedora)
-      if: contains(matrix.distro.container, 'fedora')
+      if: contains(matrix.container, 'fedora')
       shell: bash
       run: |
         set -x  # Enable debug output
@@ -258,10 +267,32 @@ jobs:
         gcc --version
 
     - name: Setup RHEL-based environment
-      if: matrix.use-composite
-      uses: docker://quay.io/${{ matrix.distro.container }}
+      if: matrix.use_composite
+      uses: docker://quay.io/${{ matrix.container }}
       with:
         args: >
+          bash -c "
+          if command -v yum &> /dev/null; then
+            yum install -y gcc make pcre-devel zlib-devel openssl-devel wget file;
+          else
+            dnf install -y gcc make pcre-devel zlib-devel openssl-devel wget file;
+          fi;
+          gcc --version;
+          cd /github/workspace;
+          if [ '${{ steps.parse.outputs.TYPE }}' = 'nginx' ]; then
+            wget --no-verbose https://nginx.org/download/nginx-${{ steps.parse.outputs.VERSION }}.tar.gz;
+            tar -xzf nginx-${{ steps.parse.outputs.VERSION }}.tar.gz;
+            cd nginx-${{ steps.parse.outputs.VERSION }};
+          else
+            wget --no-verbose https://freenginx.org/download/freenginx-${{ steps.parse.outputs.VERSION }}.tar.gz;
+            tar -xzf freenginx-${{ steps.parse.outputs.VERSION }}.tar.gz;
+            cd freenginx-${{ steps.parse.outputs.VERSION }};
+          fi;
+          ./configure --with-compat --add-dynamic-module=../;
+          make modules;
+          ls -l objs/*.so;
+          file objs/*.so;
+          "
           bash -c "
           if command -v yum &> /dev/null; then
             yum install -y gcc make pcre-devel zlib-devel openssl-devel wget file;
@@ -300,7 +331,7 @@ jobs:
 
     - name: Download and Extract
       id: download
-      if: "!matrix.use-composite"
+      if: "!matrix.use_composite"
       shell: bash
       run: |
         set -x  # Enable debug output
@@ -318,7 +349,7 @@ jobs:
         ls -la
 
     - name: Build Module
-      if: "!matrix.use-composite"
+      if: "!matrix.use_composite"
       shell: bash
       run: |
         set -x  # Enable debug output
@@ -333,20 +364,20 @@ jobs:
         file objs/ngx_http_upstream_mgmt_module.so
 
     - name: Upload Build Artifacts (Container)
-      if: "!matrix.use-composite"
+      if: "!matrix.use_composite"
       uses: actions/upload-artifact@v3
       with:
-        name: ${{ matrix.version }}-${{ matrix.distro.name }}-modules
+        name: ${{ matrix.version }}-${{ matrix.os }}-modules
         path: |
           ${{ steps.download.outputs.BUILD_DIR }}/objs/*.so
           ${{ steps.download.outputs.BUILD_DIR }}/objs/*.a
         if-no-files-found: error
 
     - name: Upload Build Artifacts (Composite)
-      if: matrix.use-composite
+      if: matrix.use_composite
       uses: actions/upload-artifact@v3
       with:
-        name: ${{ matrix.version }}-${{ matrix.distro.name }}-modules
+        name: ${{ matrix.version }}-${{ matrix.os }}-modules
         path: |
           /github/workspace/nginx-${{ steps.parse.outputs.VERSION }}/objs/*.so
           /github/workspace/nginx-${{ steps.parse.outputs.VERSION }}/objs/*.a
