--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -270,29 +270,29 @@ jobs:
       if: matrix.config.use_composite
       uses: docker://quay.io/${{ matrix.config.container }}
       with:
-        args: >
+        args: |
           bash -c "
-          if command -v yum &> /dev/null; then
-            yum install -y gcc make pcre-devel zlib-devel openssl-devel wget file;
-          else
-            dnf install -y gcc make pcre-devel zlib-devel openssl-devel wget file;
-          fi;
-          gcc --version;
-          cd /github/workspace;
-          if [ '${{ steps.parse.outputs.TYPE }}' = 'nginx' ]; then
-            wget --no-verbose https://nginx.org/download/nginx-${{ steps.parse.outputs.VERSION }}.tar.gz;
-            tar -xzf nginx-${{ steps.parse.outputs.VERSION }}.tar.gz;
-            cd nginx-${{ steps.parse.outputs.VERSION }};
-          else
-            wget --no-verbose https://freenginx.org/download/freenginx-${{ steps.parse.outputs.VERSION }}.tar.gz;
-            tar -xzf freenginx-${{ steps.parse.outputs.VERSION }}.tar.gz;
-            cd freenginx-${{ steps.parse.outputs.VERSION }};
-          fi;
-          ./configure --with-compat --add-dynamic-module=../;
-          make modules;
-          ls -l objs/*.so;
-          file objs/*.so;
-          "
+            set -ex;
+            if command -v yum &> /dev/null; then
+              yum install -y gcc make pcre-devel zlib-devel openssl-devel wget file;
+            else
+              dnf install -y gcc make pcre-devel zlib-devel openssl-devel wget file;
+            fi;
+            gcc --version;
+            cd /github/workspace;
+            if [ '${{ steps.parse.outputs.TYPE }}' = 'nginx' ]; then
+              wget --no-verbose https://nginx.org/download/nginx-${{ steps.parse.outputs.VERSION }}.tar.gz;
+              tar -xzf nginx-${{ steps.parse.outputs.VERSION }}.tar.gz;
+              cd nginx-${{ steps.parse.outputs.VERSION }};
+            else
+              wget --no-verbose https://freenginx.org/download/freenginx-${{ steps.parse.outputs.VERSION }}.tar.gz;
+              tar -xzf freenginx-${{ steps.parse.outputs.VERSION }}.tar.gz;
+              cd freenginx-${{ steps.parse.outputs.VERSION }};
+            fi;
+            ./configure --with-compat --add-dynamic-module=../;
+            make modules;
+            ls -l objs/*.so;
+            file objs/*.so;"
 
     - name: Parse version info
       id: parse
